[package]
name = "whitepool"
version = "1.0.0"
edition = "2021"
authors = ["DanyalMhai@gmail.com"]
readme = "README.md"
description = "lightweight, generic pooling library for Rust+Tokio inspired by Elixir poolboy"
license = "Apache-2.0"
keywords = ["Connection Pool", "Pool", "worker pool", "database"]
homepage   = "https://github.com/Rustixir/whitepool"
repository = "https://github.com/Rustixir/whitepool"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.18.0", features = ["rt-multi-thread", "macros", "time", "sync"]}
